--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "DialogueHelper"]
-	path = DialogueHelper
+	path = SubModules/DialogueHelper
 	url = https://github.com/BigE957/DialogueHelper
