--- a/SubModules/DialogueHelper/DialogueHelper.csproj
+++ b/SubModules/DialogueHelper/DialogueHelper.csproj
@@ -11,7 +11,7 @@
 	  <None Remove="icon.png" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Content\UI\Dialogue\CharacterAssets\Blabbirious\" />
+	  <Folder Include="UI\Dialogue\CharacterAssets\Blabbirious\" />
 	</ItemGroup>
 
 	<!-- References -->
