removed calamity mod global usings
HOLY FUCKING SHIT

--- a/TwilightEgress.csproj
+++ b/TwilightEgress.csproj
@@ -14,7 +14,7 @@
 		<LangVersion>latest</LangVersion>
 		
 		<!-- for github workflows -->
-		<ExtraBuildModFlags Condition="'$(TML_SAVE_DIR)' != ''">$(ExtraBuildModFlags)-savedirectory &quot;$([System.IO.Path]::GetFullPath('.'))/$(TML_SAVE_DIR)&quot; </ExtraBuildModFlags>
+		<ExtraBuildModFlags Condition="'$(TML_SAVE_DIR)' != ''">$(ExtraBuildModFlags)-savedirectory "$([System.IO.Path]::GetFullPath('.'))/$(TML_SAVE_DIR)" </ExtraBuildModFlags>
 	</PropertyGroup>
 
 	<!-- References -->
