--- a/TwilightEgress.csproj
+++ b/TwilightEgress.csproj
@@ -30,6 +30,7 @@
 	<ItemGroup>
 	  <Folder Include="Assets\Models\" />
 	  <Folder Include="Assets\Structures\" />
+	  <Folder Include="Assets\Textures\Items\EnchantedOvergrowth\" />
 	</ItemGroup>
 
 	<!-- Asset Generator -->
