--- a/TwilightEgress.csproj
+++ b/TwilightEgress.csproj
@@ -4,6 +4,7 @@
 		<TargetsPath Condition="'$(TargetsPath)' == ''">..\tModLoader.targets</TargetsPath>
 		<CalamityBinary Condition="'$(CalamityBinary)' == ''">..\..\ModReader\CalamityMod\CalamityMod.dll</CalamityBinary>
 		<LuminanceBinary Condition="'$(LuminanceBinary)' == ''">..\..\ModReader\Luminance\Luminance.dll</LuminanceBinary>
+		<Box2DBinary Condition="'$(Box2DBinary)' == ''">.\lib\Box2D.NetStandard.dll</Box2DBinary>
 	</PropertyGroup>  
 	<!-- Import tModLoader mod properties -->
 	<Import Project="$(TargetsPath)" />
@@ -25,6 +26,10 @@
 		
 		<Reference Include="Luminance">
 			<HintPath>$(LuminanceBinary)</HintPath>
+		</Reference>
+		
+		<Reference Include="Box2D.NetStandard" Version="1.0.4" >
+			<HintPath>$(Box2DBinary)</HintPath>
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
